src/objects/DT_Rule_Version__c.object
<CustomObject>
    <fields>
        <fullName>DT_Activated_Date__c</fullName>
        <label>Activated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DT_Assign_To_Owner_Of__c</fullName>
        <label>Assign to Owner Of</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Assignee__c</fullName>
        <label>Assignee</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assign it back to the Submitted Person</fullName>
                </value>
                <value>
                    <fullName>Assign it to latest Task Owner</fullName>
                </value>
                <value>
                    <fullName>Assign it to latest Module Owner</fullName>
                </value>
                <value>
                    <fullName>Case Manager</fullName>
                    <isActive>false</isActive>
                    <label>Case Manager</label>
                </value>
                <value>
                    <fullName>Supervisor</fullName>
                    <isActive>false</isActive>
                    <label>Supervisor</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DT_Assignment_Type__c</fullName>
        <label>Assignment Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DT_Criteria_Logic__c</fullName>
        <label>Criteria Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Deactivated_Date__c</fullName>
        <label>Deactivated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DT_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DT_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DT_Navigation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Landing Navigation</label>
        <referenceTo>DT_Landing_Navigation__c</referenceTo>
        <relationshipLabel>Rule Versions</relationshipLabel>
        <relationshipName>Rule_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DT_Queue_Name__c</fullName>
        <description>Contains the Developer Name field value of the Queue assigned</description>
        <label>Queue Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Rule__c</fullName>
        <label>Rule</label>
        <referenceTo>DT_Rule__c</referenceTo>
        <relationshipName>DT_Rule_Versions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DT_Version_Description__c</fullName>
        <label>Version Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DT_Version_Number__c</fullName>
        <description>Version Number in incremental for a single rule</description>
        <label>Version Number</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Rule Version</label>
    <nameField>
        <displayFormat>RV-{00000}</displayFormat>
        <label>Version Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>